build/ko/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiae
  namespace: kiae-system
  labels:
    app: kiae
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiae
  template:
    metadata:
      labels:
        app: kiae
    spec:
      containers:
        - name: my-app
          image: ko://github.com/kiaedev/kiae
          args: [ "server" ]
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
spec:
  selector:
    app: kiae
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
