build/ko/ingressgateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiae
  namespace: kiae-system
spec:
  hosts:
    - "*"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
spec:
